--- a/reference/IS-SN-importexport.yaml
+++ b/reference/IS-SN-importexport.yaml
@@ -3,7 +3,7 @@ x-stoplight:
   id: 91a4ao3uk9mo3
 info:
   title: Import export Selfnet
-  version: '0.1'
+  version: '0.4'
   description: |-
     # SELFNET IMPORT EXPORT API documentation
 
@@ -65,6 +65,37 @@ paths:
               items:
                 $ref: '#/components/schemas/Cards'
       description: Used to upsert one or more cards.
+  /cards/transfer:
+    post:
+      summary: Transfer credit between two cards
+      operationId: cards-transfer
+      responses:
+        '204':
+          description: No Content
+        '403':
+          description: Forbidden
+        '404':
+          description: Not Found
+        '500':
+          description: Internal Server Error
+      description: Transfer credit between two cards
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                supplier_code:
+                  type: string
+                source_card_pan:
+                  type: string
+                target_card_pan:
+                  type: string
+              required:
+                - supplier_code
+                - source_card_pan
+                - target_card_pan
+    parameters: []
   /cards/articles:
     put:
       summary: Link cards to articles
@@ -282,7 +313,7 @@ paths:
           name: date_end
           description: Unix time format.
     post:
-      summary: Set a new recharge
+      summary: Request a new recharge
       operationId: post-recharges
       responses:
         '204':
@@ -294,6 +325,8 @@ paths:
               type: object
               properties:
                 supplier_code:
+                  type: string
+                progressive_number:
                   type: string
                 recharges:
                   type: array
@@ -309,6 +342,7 @@ paths:
                       - amount
               required:
                 - supplier_code
+                - progressive_number
 components:
   schemas:
     Cards:
